# RustGraphicDemo

./: Cargo.toml  README.md  index.html
assets/: .~lock.phm_proba-kopia.docx#  phm_proba-kopia.docx
src/: lib.rs  main.rs  utils.rs  vector.rs
src/app/: default.rs  fog.rs  implements.rs  mod.rs  painter.rs  ui.rs
src/camera/: mod.rs
src/filler/: edge.rs  mod.rs  paint_line.rs
src/light/: implements.rs  mod.rs  point_light.rs  reflector.rs  traits.rs
src/shape/: mod.rs  polygon.rs
src/traits/: movable.rs
src/utils/: bresenham.rs  edge.rs  file_load.rs  mod.rs  vector.rs
