[package]
name = "graphic_demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Przemysław Kacprzak"]

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } 
rand = "0.8.5"
egui_extras = { version = "0.19.0", features = ["image"]}
chrono = "0.4.23"
tracing-subscriber = "0.3"
nalgebra = "0.31.4"
itertools = "0.10.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 


[patch.crates-io]
